[FIX] Expand of raw alert overflowing on the right side

--- a/source/app/static/assets/css/alerts.css
+++ b/source/app/static/assets/css/alerts.css
@@ -114,3 +114,7 @@
     font-size: 16px;
 }
 
+.pre-scrollable {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
